<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">吃啥</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login">登录</string>
    <string name="add">添加</string>
    <string name="choose">吃啥</string>
    <string name="defaultDesc">默认图片描述</string>
    <string name="step1">步骤1/2：添加美食照片</string>
    <string name="savephoto">拍照</string>
    <string name="step2">步骤2/2：添加美食描述</string>
    <string name="next">下一步</string>
    <string name="delicacy">菜名</string>
    <string name="hint_delicacy">如：酸菜牛肉面</string>
    <string name="price">价格</string>
    <string name="hint_price">如：8.5</string>
    <string name="yuan">元</string>
    <string name="restaurant">店名</string>
    <string name="hint_restaurant">如：清真食堂</string>
    <string name="addr">地址</string>
    <string name="hint_addr">如：汉口路9号</string>
    <string name="telphone">电话号码</string>
    <string name="hint_phone">如：025&#8211;62827866</string>
    <string name="is_special">推荐菜</string>
    <string name="is_on">正在供应</string>
    <string name="is_take_away">支持外卖</string>
    <string name="done">完成</string>

</resources>