<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/step1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <cn.edu.nju.delicacy.CameraView
        android:id="@+id/camera_preview"
        android:layout_width="267dp"
        android:layout_height="330dp"
        android:layout_gravity="center" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnsavepic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/savephoto"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/next"
            android:textColor="#cccccc" />
    </LinearLayout>
    
</LinearLayout>